Fixed index.html scripts

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,9 @@
 <script src="/jquery/dist/jquery.min.js" charset="utf-8"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
 <script src="/app/assets/js/jquery-ui.min.js" charset="utf-8"></script>
-<script src="/ocLazyLoad/dist/ocLazyLoad.min.js" charset="utf-8"></script>
-<script src="/app/assets/js/p5.min.js" charset="utf-8"></script>
-<script src="/app/assets/js/p5.sound.js" charset="utf-8"></script>
+<script src="/oclazyload/dist/ocLazyLoad.min.js" charset="utf-8"></script>
+<!-- <script src="/app/assets/js/p5.min.js" charset="utf-8"></script>
+<script src="/app/assets/js/p5.sound.js" charset="utf-8"></script> -->
 
 
 <script src="/angular-ui-router/release/angular-ui-router.min.js" charset="utf-8"></script>
@@ -57,12 +57,12 @@
 <script src="/app/app.js" charset="utf-8"></script>
 
 <script src="/app/components/home/home.js" charset="utf-8"></script>
-<script src="/app/components/home/UsersFactory.js" charset="utf-8"></script>
+<script src="/app/components/home/usersFactory.js" charset="utf-8"></script>
 <script src="/app/components/home/authService.js" charset="utf-8"></script>
 <script src="/app/components/navigation/navigationController.js" charset="utf-8"></script>
 <script src="/app/components/messageBoard/messageBoardController.js" charset="utf-8"></script>
 <script src="/app/components/messageBoard/messageFactory.js" charset="utf-8"></script>
-<script src="/app/components/microphoneDb/MicrophoneController.js" charset="utf-8"></script>
+<script src="/app/components/microphoneDb/microphoneController.js" charset="utf-8"></script>
 <script src="/app/components/waveGen/waveGenController.js" charset="utf-8"></script>
 <script src="/angular-ui-tinymce/dist/tinymce.min.js" charset="utf-8"></script>
 <script src="/tinymce/tinymce.min.js" charset="utf-8"></script>
