--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Login App</title>
+    <title>Audio Hackers</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/app/assets/css/bootstrap-social.css">
     <link rel="stylesheet" href="/app/assets/css/font-awesome.min.css">
@@ -52,7 +52,6 @@
 <script src="/angular-bootstrap/ui-bootstrap.min.js" charset="utf-8"></script>
 <script src="/angular-bootstrap/ui-bootstrap-tpls.min.js" charset="utf-8"></script>
 <script src="angular-sanitize/angular-sanitize.min.js"></script>
-
 
 <script src="/app/app.js" charset="utf-8"></script>
 
